# mmi-code

./: Cargo.toml  README.md
scripts/: clion.cmd  fleet.cmd  idea.cmd  idea_comm.cmd  rustrover.cmd  webstorm.cmd
src/: main.rs
