[package]
name = "mmi-code"
version = "0.1.0"
edition = "2021"
repository = "github.com/Carter907/mmi-code"
readme = "an jetbrains terminal tool for easily running your code in popular IDEs."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
