[package]
name = "mmi-code"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Carter907/mmi-code"
readme = "README.md"
description = "a terminal tool for windows users that allows for easy applicaiton startup of popular IDEs from the command line"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
